@@ -106,8 +106,8 @@
         <!-- Testing -->
         <dependency>
             <groupId>io.mockk</groupId>
-            <artifactId>mockk</artifactId>
-            <version>1.13.4</version>
+            <artifactId>mockk-jvm</artifactId>
+            <version>1.13.8</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -188,6 +188,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.1.2</version>
                 <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+
                     <includes>
                         <include>**/YassSuite.class</include>
                     </includes>
@@ -198,6 +200,9 @@
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <version>1.9.10</version>
+                <configuration>
+                    <jvmTarget>20</jvmTarget>
+                </configuration>
                 <executions>
                     <execution>
                         <id>compile</id>
